[T-HEAD] Fix error of 'make check' and control doc building separately by macro BUILD_ALL_DOCS

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -193,7 +193,9 @@ valid-manpages: $(MANPAGES_XML_FILES)
 	  touch $@; \
 	fi
 
+ ifeq ($(BUILD_ALL_DOCS),yes)
 check-local: valid-manual valid-manpages
+ endif
 
 # The text version of the FAQ.
 FAQ.txt:
