[T-HEAD] Add load/store family instruction support
This patch adds guest code of all xthead load/store extension.
It includes 3 classes of integer, they are:
  a, L{U}R{B,H,W,D} with signed/zero-extended and S{U}R{B,H,W,D}
  b, L{B,H,W,D}I{A,B} with signed/zero-extended and S{B,H,W,D}I{A,B}
  c, L{W,D}D with signed/zero-extended and S{W,D}D
Also, it includes 1 class of float, it's:
  a, FL{U}R{W,D} and FS{U}R{W,D}

--- a/none/tests/riscv64/Makefile.am
+++ b/none/tests/riscv64/Makefile.am
@@ -12,7 +12,8 @@ EXTRA_DIST = \
 	float32.stdout.exp float32.stderr.exp float32.vgtest \
 	float64.stdout.exp float64.stderr.exp float64.vgtest \
 	integer.stdout.exp integer.stderr.exp integer.vgtest \
-	muldiv.stdout.exp muldiv.stderr.exp muldiv.vgtest
+	muldiv.stdout.exp muldiv.stderr.exp muldiv.vgtest \
+	xthead.stdout.exp xthead.stderr.exp xthead.vgtest
 
 check_PROGRAMS = \
 	allexec \
@@ -22,7 +23,8 @@ check_PROGRAMS = \
 	float32 \
 	float64 \
 	integer \
-	muldiv
+	muldiv \
+	xthead
 
 AM_CFLAGS    += @FLAG_M64@
 AM_CXXFLAGS  += @FLAG_M64@
