[T-HEAD] supp: update suppression rules for silencing memcheck errors casused by ld

--- a/glibc-2.X.supp.in
+++ b/glibc-2.X.supp.in
@@ -64,6 +64,12 @@
    obj:*/lib*/ld-@GLIBC_VERSION@*.so*
    obj:*/lib*/libdl-@GLIBC_VERSION@*.so*
 }
+{
+   dl-hack3-cond-5
+   Memcheck:Cond
+   obj:*/lib*/ld-@GLIBC_VERSION@*.so*
+   obj:*/lib*/ld-@GLIBC_VERSION@*.so*
+}
 
 {
    dl-hack4-64bit-addr-1
