riscv64: Add Zfh extension support

--- a/none/tests/riscv64/Makefile.am
+++ b/none/tests/riscv64/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = \
 	atomic.stdout.exp atomic.stderr.exp atomic.vgtest \
 	compressed.stdout.exp compressed.stderr.exp compressed.vgtest \
 	csr.stdout.exp csr.stderr.exp csr.vgtest \
+	float16.stdout.exp float16.stderr.exp float16.vgtest \
 	float32.stdout.exp float32.stderr.exp float32.vgtest \
 	float64.stdout.exp float64.stderr.exp float64.vgtest \
 	integer.stdout.exp integer.stderr.exp integer.vgtest \
@@ -19,6 +20,7 @@ check_PROGRAMS = \
 	atomic \
 	compressed \
 	csr \
+	float16 \
 	float32 \
 	float64 \
 	integer \
