--- a/tests/vg_regtest.in
+++ b/tests/vg_regtest.in
@@ -641,6 +641,7 @@ sub test_one_dir($$)
     my @fs = glob "*";
     my $found_tests = (0 != (grep { $_ =~ /\.vgtest$/ } @fs));
 
+    my $tests_start_time = time;
     if ($found_tests) {
         print "-- Running  tests in $full_dir $dashes\n";
     }
@@ -652,7 +653,8 @@ sub test_one_dir($$)
         }
     }
     if ($found_tests) {
-        print "-- Finished tests in $full_dir $dashes\n";
+        my $tests_cost_time = time - $tests_start_time;
+        print "-- Finished tests in $full_dir (cost time: $tests_cost_time sec) $dashes\n";
     }
 
     chdir("..");
