[T-HEAD] RVV 1.x: support co-existing for 1.x & 0.7.1

--- a/Makefile.all.am
+++ b/Makefile.all.am
@@ -291,7 +291,7 @@ AM_CFLAGS_PSO_MIPS64_LINUX = @FLAG_M64@ $(AM_CFLAGS_BASE) \
 AM_CCASFLAGS_MIPS64_LINUX  = @FLAG_M64@ -g
 
 AM_FLAG_M3264_RISCV64_LINUX = @FLAG_M64@
-AM_CFLAGS_RISCV64_LINUX     = @FLAG_M64@ $(AM_CFLAGS_BASE)
+AM_CFLAGS_RISCV64_LINUX     = @FLAG_M64@ $(AM_CFLAGS_BASE) $(CFLAGS_RISCV64_EXTRA)
 AM_CFLAGS_PSO_RISCV64_LINUX = @FLAG_M64@ $(AM_CFLAGS_BASE) $(AM_CFLAGS_PSO_BASE)
 AM_CCASFLAGS_RISCV64_LINUX  = @FLAG_M64@ -g
 
