--- a/Makefile.vex.am
+++ b/Makefile.vex.am
@@ -225,4 +225,4 @@ pkglib_LIBRARIES  += libvex-@VGCONF_ARCH_PRI@-@VGCONF_OS@-rv64v0p7.a
 LIBVEX_SOURCES_RV64V0p7 = priv/guest_riscv64V0p7_helpers.c
 libvex_@VGCONF_ARCH_PRI@_@VGCONF_OS@_rv64v0p7_a_SOURCES  = $(LIBVEX_SOURCES_RV64V0p7)
 libvex_@VGCONF_ARCH_PRI@_@VGCONF_OS@_rv64v0p7_a_CPPFLAGS = $(AM_CPPFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) -Ipriv
-libvex_@VGCONF_ARCH_PRI@_@VGCONF_OS@_rv64v0p7_a_CFLAGS   = $(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) $(LIBVEX_CFLAGS) -Wa,-march=rv64gcv0p7
+libvex_@VGCONF_ARCH_PRI@_@VGCONF_OS@_rv64v0p7_a_CFLAGS   = $(AM_CFLAGS_@VGCONF_PLATFORM_PRI_CAPS@) $(LIBVEX_CFLAGS) $(subst v_,v0p7_, $(CFLAGS_RISCV64_EXTRA))
